[build-system]
requires = ["setuptools>=80.9.0,<81.0.0", "wheel>=0.45.1,<0.46.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ratchetr"
version = "0.1.0"
description = "Type-checking, lint, and other diagnostics aggregator with ratcheted readiness dashboards and pluggable engines."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "CrownOps Engineering", email = "crownops-eng@pm.me" }]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Build Tools",
]
dependencies = [
  "pydantic>=2.12.4,<3.0.0",
  "typing-extensions>=4.15.0,<5.0.0; python_version < '3.12'",
  "tomli>=2.3.0,<3.0.0; python_version < '3.11'"
]

[project.urls]
Homepage = "https://github.com/ratchetr/ratchetr"
Documentation = "https://github.com/ratchetr/ratchetr"
"Issue Tracker" = "https://github.com/ratchetr/ratchetr/issues"

[project.scripts]
ratchetr = "ratchetr.cli:main"
rtr = "ratchetr.cli:main"

[project.optional-dependencies]
engines = [
  "pyright>=1.1.407,<2.0.0",
  "mypy>=1.19.0,<2.0.0",
]

test = [
  "pytest>=9.0.2,<10.0.0",
  "pytest-benchmark>=5.2.3,<6.0.0",
  "pytest-cov>=7.0.0,<8.0.0",
  "pytest-xdist>=3.8.0,<4.0.0",
  "pytest-asyncio>=1.3.0,<2.0.0",
  "anyio>=4.12.0,<5.0.0",
  "hypothesis>=6.148.7,<7.0.0",
]

lint = [
  "ruff>=0.14.8,<0.15.0",
  "pylint>=4.0.4,<5.0.0",
]

security = [
  "bandit>=1.9.2,<2.0.0",
  "safety>=3.7.0,<4.0.0",
]

build = [
  "build>=1.3.0,<2.0.0",
  "twine>=6.2.0,<7.0.0",
]

tools = [
  "commitizen>=4.10.0,<5.0.0",
  "pre-commit>=4.5.0,<5.0.0",
  "jsonschema>=4.25.1,<5.0.0",
]

docs = [
  "pymarkdownlnt>=0.9.33,<0.10.0",
]

dev = [
  "ratchetr[test,lint,security,engines,build,tools,docs]",
]


# --- Setuptools configuration      ---
# -------------------------------------

[tool.setuptools]
package-dir = {"" = "src"}
license-files = ["LICENSE", "NOTICE"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["ratchetr*"]

[tool.setuptools.package-data]
ratchetr = ["py.typed", "**/*.pyi"]


# --- Mypy configuration            ---
# -------------------------------------

[tool.mypy]
python_version = "3.10"
mypy_path = ["src", "typings"]
files = ["src/ratchetr", "tests", "scripts/docs"]

# Core strictness (strict already enables many checks)
strict = true

# Extra strictness beyond `strict` (useful, low-conflict)
disallow_any_unimported = true
no_implicit_reexport = true
extra_checks = true
strict_equality = true

# Good hygiene / UX
warn_unused_configs = true
warn_unreachable = true
show_error_context = true
show_column_numbers = true
show_error_codes = true
pretty = true
color_output = true
error_summary = true

# Import/package discovery
namespace_packages = true
explicit_package_bases = true

# Plugins
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disable_error_code = [
  "arg-type",
  "list-item",
  "dict-item",
  "typeddict-item",
  "var-annotated",
  "attr-defined",
  "no-any-return",
  "assignment",
]


# --- Pyright configuration         ---
# -------------------------------------

[tool.pyright]
include = ["src", "tests", "scripts/docs"]
extraPaths = [".", "src"]
exclude = [
    "**/__pycache__",
    "**/.pytest_cache",
    "**/node_modules",
    "**/.venv",
    "**/build",
    "**/dist",
    "**/*.egg-info",
    "examples/**",
]
venvPath = "."
venv = ".venv"
pythonVersion = "3.10"
pythonPlatform = "Linux"
stubPath = "typings"
typeCheckingMode = "strict"
reportCallInDefaultInitializer = "error"
reportImplicitOverride = "error"
reportImportCycles = "error"
reportMissingSuperCall = "error"
reportPropertyTypeMismatch = "error"
reportUninitializedInstanceVariable = "error"
reportUnnecessaryTypeIgnoreComment = "error"
reportUnreachable = "error"

[[tool.pyright.executionEnvironments]]
root = "scripts"
extraPaths = [".", "src"]
reportPrivateUsage = false

[[tool.pyright.executionEnvironments]]
root = "tests"
extraPaths = [".", "src", "tests"]
reportPrivateUsage = false
reportTypedDictNotRequiredAccess = false
reportUnknownArgumentType = false
reportUnknownLambdaType = false
reportUnknownVariableType = false
reportUnknownMemberType = false
reportUnknownParameterType = false
reportImplicitOverride = false
reportArgumentType = false
reportGeneralTypeIssues = false
reportMissingImports = false
reportMissingModuleSource = false
reportUntypedFunctionDecorator = false

[[tool.pyright.executionEnvironments]]
root = "src"


# --- Ruff configuration            ---
# -------------------------------------

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = [
    ".git",
    ".venv",
    ".pre-commit-cache",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
]
preview = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # Formatter / upgrade overlaps
    "COM812", "ISC001",  # Trailing comma + implicit string concat handled by Ruff formatter
    "UP040", "UP047",    # TypeAlias / TypeVar syntax kept for Python 3.10 support

    # Docstring presence (missing-*) is enforced by Pylint docparams; Ruff focuses on style.
    "D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107",

    # Naming conventions (functions/classes/variables/constants) are enforced by Pylint (C0103);
    # Ruff naming is disabled except for N812 (import-alias style).
    "N801", "N802", "N803", "N804", "N805", "N806", "N811", "N813", "N814", "N815", "N816", "N817",

    # Broad exception checks are handled by Pylint W0718.
    "BLE001",
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
# Test files: Core exceptions widely recognized as best practice
# References:
# - Ruff docs: https://docs.astral.sh/ruff/configuration/
# - Stack Overflow: https://stackoverflow.com/questions/68428293/s101-use-of-assert-detected-for-python-tests
# - Ruff issue #14149: https://github.com/astral-sh/ruff/issues/14149
# - Ruff issue #16892: https://github.com/astral-sh/ruff/issues/16892 (SLF001 in tests)
# Bad examples don't get scanned and examples don't need an init
"examples/bad_typing/**/*.py" = ["ALL"]
"examples/**/*.py" = ["INP001"]
# Scripts: Utility scripts at repo root have different standards.
# Note: scripts under scripts/docs are treated as first-class, strongly-typed code
# and must not rely on script-level ignores.
"scripts/*.py" = ["T201", "INP001"]
"tests/**/*.py" = [
    "S101",      # assert statements are fundamental to pytest
    "SLF001",    # Testing internals requires private member access
    "PLC2701",   # Tests must import private modules to test them
    "PLR2004",   # Magic numbers are standard in test data/fixtures
    "INP001",    # Tests don't require __init__.py
]
# Conftest files: Import after code for fixture registration
"tests/**/conftest.py" = ["E402"]
# Integration/performance tests: Subprocess execution required
"tests/integration/**/*.py" = ["S603", "S607"]
"tests/performance/**/*.py" = ["S603", "S607"]
# Specific test file testing git operations
"tests/unit/misc/test_refactor_imports.py" = ["S404", "S603", "S607"]
# TypedDict modules mirror external schemas that require camelCase keys
# TODO: Restrict N815 ignores to JSON boundary after implementing schema validation
"src/ratchetr/core/model_types.py" = ["N815"]
"src/ratchetr/core/summary_types.py" = ["N815"]
"src/ratchetr/manifest/typed.py" = ["N815"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"
docstring-quotes = "double"

[tool.ruff.lint.isort]
known-first-party = ["ratchetr"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.lint.pylint]
max-args = 7
max-branches = 12
max-returns = 6
max-statements = 50
max-positional-args = 5
max-locals = 15        # Local variables per function (Pylint-only)
max-bool-expr = 5      # Boolean expressions in one statement (Pylint-only)
max-nested-blocks = 5
max-public-methods = 20


[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
preview = true
docstring-code-format = true
docstring-code-line-length = 88


# --- Pylint configuration          ---
# -------------------------------------

[tool.pylint.main]
# Python version target - matches project minimum
py-version = "3.10"

# Recursively check all Python files in directories
recursive = true

# Ensure src/ is on path for imports
init-hook = "import sys; from pathlib import Path; ROOT = Path.cwd(); sys.path[:0] = [str(ROOT / 'src')]"

# Ignore build artifacts, caches, and test files
ignore-patterns = [
    "^\\..*",          # Hidden files/dirs
    "^__pycache__$",   # Python cache
    "\\.pyc$",         # Compiled Python
    ".*\\.egg-info$",  # Package metadata
    "^build$",
    "^dist$",
    "^tests$",         # Tests have separate rules
    "test_.*\\.py$",
    ".*_test\\.py$",
    "^typings$",
]

# Extensions provide advanced checks not in core Pylint
load-plugins = [
    "pylint.extensions.check_elif",         # Suggest elif over else+if
    "pylint.extensions.bad_builtin",        # Flag discouraged builtins (map, filter)
    "pylint.extensions.docparams",          # ⭐ CRITICAL: Validates Google-style docstrings (W9011, W9015)
    "pylint.extensions.for_any_all",        # Suggest any()/all() over loops
    "pylint.extensions.set_membership",     # Suggest sets for membership tests
    "pylint.extensions.code_style",         # Suggest dataclasses, namedtuples
    "pylint.extensions.overlapping_exceptions",  # Detect redundant exception handlers
    "pylint.extensions.typing",             # Flag deprecated typing aliases
    "pylint.extensions.redefined_variable_type",  # ⭐ CRITICAL: Catch type instability (R0204)
    "pylint.extensions.comparison_placement",     # Suggest constant on left in comparisons
    "pylint.extensions.confusing_elif",     # Detect confusing elif indentation (R5601)
    "pylint.extensions.consider_refactoring_into_while_condition",  # Loop refactoring suggestions
]

# Enable all checks by default, disable specific ones in messages_control
enable = "all"

[tool.pylint.messages_control]
# ==============================================================================
# TOOL DOMAIN SEPARATION: Ruff vs Pylint
# ==============================================================================
# STRATEGY: Ruff is primary linter (fast, modern, actively expanding)
#           Pylint specializes in semantic analysis Ruff doesn't cover
#
# RUFF HANDLES (mature & superior):
#   - Unused imports (F401) - more accurate than Pylint W0611
#   - Security (S*) - comprehensive security rules
#   - Import sorting (I) - isort-compatible
#   - Style/formatting (E/W/Q) - formatter-aware
#   - Modern Python (UP) - upgrade syntax
#
# PYLINT HANDLES (unique strengths):
#   - Semantic refactoring (R1*/R2*/R3*) - logic improvements
#   - Type redefinitions (R0204) - Ruff doesn't catch
#   - Documentation enforcement (W9011/W9015) - via docparams extension
#   - Structural complexity metrics (locals/parents/attributes/public methods/bool expr)
#   - Code patterns (R1716, R5601, W1404) - Ruff doesn't have equivalents
#   - Duplicate code (R0801) - currently disabled, optional
# ==============================================================================

disable = [
    "locally-disabled",    # I0011/I0020/I0021 - allow documented inline disables without noise
    "suppressed-message",  # I0020 - avoid noise when intentional suppressions are documented
    # === FORMATTING & STYLE - Delegated to Ruff ===
    "line-too-long",        # C0301 - Ruff handles via line-length = 120
    "bad-indentation",      # W0311 - Ruff formatter handles indentation

    # === DESIGN CHOICES - Intentional deviations ===
    "too-few-public-methods",  # R0903 - Valid for simple data classes, mixins
    "no-self-argument",        # E0213 - Needed for test fixtures, property descriptors

    # === TEST PATTERNS - Necessary for pytest ===
    "redefined-outer-name",  # W0621 - Pytest fixtures intentionally shadow

    # === CODE DUPLICATION - Disabled for now ===
    "duplicate-code",  # R0801 - Too noisy for current codebase
                       # TODO: Re-evaluate after major refactoring complete

    # === STYLE PREFERENCES - Team decision ===
    "consider-using-assignment-expr",  # R6103 - Walrus operator not always more readable
                                       # Developer should decide case-by-case

    # === COMPLEXITY & SIZE - Delegated to Ruff's pylint plugin where supported ===
    "too-many-arguments",             # R0913 - max-args
    "too-many-branches",              # R0912 - max-branches
    "too-many-return-statements",     # R0911 - max-returns
    "too-many-locals",                # R0914 - max-locals
    "too-many-statements",            # R0915 - max-statements
    "too-many-positional-arguments",  # R0917 - max-positional-args
    "too-many-nested-blocks",         # R1702 - max-nested-blocks

    # === RUFF OVERLAP - Ruff is more accurate ===
    "unused-import",  # W0611 - FALSE POSITIVES on cast() string type annotations
                      # Ruff F401 correctly understands imports used in:
                      #   - cast(\"Type\", value)
                      #   - cast(\"list[Type]\", value)
                      # Pylint's static analysis doesn't parse string literals
]

[tool.pylint.format]
expected-line-ending-format = "LF"
ignore-long-lines = "^\\s*(# )?<?https?://\\S+>?$"
max-module-lines = 1000

[tool.pylint.design]
# ⭐ COMPLEXITY ENFORCEMENT
# Rationale: Ruff enforces core per-function complexity; Pylint extends with
# additional structural metrics not yet available in Ruff.
# TODO: tighen these additional complexity checks and refactor as required
max-parents = 7            # Inheritance depth (Pylint-only)
max-attributes = 8         # Instance attributes per class (Pylint-only)
min-public-methods = 0     # Allow utility classes with 0-1 methods

[tool.pylint.basic]
# ⭐ NAMING CONVENTIONS - Enforced strictly
# Rationale: Ruff N* doesn't cover module-level private constants
argument-naming-style = "snake_case"
attr-naming-style = "snake_case"
class-attribute-naming-style = "any"        # Allow both UPPER_CASE and snake_case
class-const-naming-style = "UPPER_CASE"
class-naming-style = "PascalCase"
const-naming-style = "UPPER_CASE"          # ⭐ Catches _pkg_version violations
function-naming-style = "snake_case"
inlinevar-naming-style = "any"
method-naming-style = "snake_case"
module-naming-style = "snake_case"
variable-naming-style = "snake_case"

# ⭐ DOCUMENTATION REQUIREMENTS
docstring-min-length = 10              # Min chars for docstring requirement
no-docstring-rgx = "^_"                # Private functions don't need docstrings
good-names = ["i", "j", "k", "ex", "db", "id", "pk", "_", "e"]

# Strict docstring parameter/return documentation
accept-no-param-doc = false   # ⭐ Require all params documented (W9015)
accept-no-raise-doc = false   # Require exceptions documented
accept-no-return-doc = false  # ⭐ Require returns documented (W9011)
accept-no-yields-doc = false  # Require yields documented

[tool.pylint.imports]
deprecated-modules = ["optparse", "tkinter.tix"]
allow-wildcard-with-all = false
analyse-fallback-blocks = true

[tool.pylint.exceptions]
overgeneral-exceptions = ["builtins.BaseException", "builtins.Exception"]

[tool.pylint.logging]
logging-modules = ["logging"]
logging-format-style = "old"  # ⭐ CRITICAL: Matches actual codebase usage (%s not {})
                              # Prevents E1205 false positives

[tool.pylint.refactoring]
never-returning-functions = ["sys.exit", "argparse.parse_error"]

[tool.pylint.similarities]
min-similarity-lines = 4
ignore-comments = true
ignore-docstrings = true

[tool.pylint.typecheck]
contextmanager-decorators = ["contextlib.contextmanager"]
generated-members = []
ignored-modules = []
ignored-classes = ["SQLObject", "optparse.Values", "thread._local", "_thread._local"]
mixin-class-rgx = ".*MixIn"

[tool.pylint.variables]
allowed-redefined-builtins = []
dummy-variables-rgx = "_.*|dummy.*"
ignored-argument-names = "_.*"
init-import = false

[tool.pylint.classes]
defining-attr-methods = ["__init__", "__new__", "setUp", "asyncSetUp", "__post_init__"]
exclude-protected = ["_asdict", "_fields", "_replace", "_source", "_make"]
valid-classmethod-first-arg = ["cls"]
valid-metaclass-classmethod-first-arg = ["mcs"]

[tool.pylint.string]
check-quote-consistency = true
check-str-concat-over-line-jumps = true


# --- Pytest configuration          ---
# -------------------------------------

[tool.pytest.ini_options]
minversion = "8.4"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = ["."]
norecursedirs = [
    ".venv",
    ".hypothesis",
    "node_modules",
    "__pycache__",
    ".git",
    "build",
    "dist",
    "*.egg-info",
]
asyncio_mode = "auto"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "-v",
    "--benchmark-disable",
    "-n",
    "auto",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests requiring external services",
    "unit: Unit tests",
    "smoke: Smoke tests",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
]


# --- Pymarkdownlnt configuration   ---
# -------------------------------------

[tool.pymarkdown]
plugins.line-length.enabled = false
plugins.no-duplicate-heading.siblings_only = true

# --- Pytest coverage configuration ---
# -------------------------------------

[tool.coverage.run]
source = ["src/ratchetr"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/.venv/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
fail_under = 95
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    'if __name__ == "__main__":',
    "if TYPE_CHECKING:",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"


# --- Bandit configuration          ---
# -------------------------------------

[tool.bandit]
exclude_dirs = [
    "tests",
    ".venv",
    "build",
    "dist",
]
targets = ["src"]
