[metadata]
name = typing-inspector
version = 0.1.0
description = Typing diagnostics aggregator for pyright and mypy
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = PantherianCodeX
url = https://github.com/PantherianCodeX/typing-inspector

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
    pyright>=1.1.392
    mypy>=1.8.0

[options.entry_points]
console_scripts =
    typing-inspector = typing_inspector.cli:main

[options.packages.find]
where = src
