[metadata]
name = typewiz
version = 0.2.0
description = Python typing diagnostics aggregator with pluggable runners
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = PantherianCodeX
url = https://github.com/PantherianCodeX/typewiz

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.12
install_requires =
    pyright>=1.1.392
    mypy>=1.8.0
    pydantic>=2.7,<3

[options.entry_points]
console_scripts =
    typewiz = typewiz.cli:main
    typing-inspector = typewiz.cli:main

[options.packages.find]
where = src

[options.extras_require]
tests = pytest>=8.4.0
