[metadata]
name = typewiz
version = 0.2.0
description = Python typing diagnostics aggregator with pluggable runners
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = PantherianCodeX
url = https://github.com/PantherianCodeX/typewiz
project_urls =
    Documentation = https://github.com/PantherianCodeX/typewiz
    Issue Tracker = https://github.com/PantherianCodeX/typewiz/issues

classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Topic :: Software Development :: Build Tools

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.12
install_requires =
    pyright>=1.1.407
    mypy>=1.8.0
    pydantic>=2.7,<3

[options.entry_points]
console_scripts =
    typewiz = typewiz.cli:main
    typing-inspector = typewiz.cli:main

[options.packages.find]
where = src

[options.extras_require]
tests = pytest>=8.4.0

[options.package_data]
typewiz = py.typed
